# EuryptOS

./: README.md
EuryptOS/: Cargo.toml
EuryptOS/.cargo/: config
EuryptOS/src/: main.rs  vga_buffer.rs
